GNOME Bugzilla – Bug 762035
gegl_operation_invalidate doesn't respect the clear_cache parameter
Last modified: 2016-02-15 20:22:18 UTC
gegl_operation_invalidate always clears the cache irrespective of what the clear_cache parameter says. After grepping through the callers of this function, I don't see why this should be so.
Created attachment 321124 [details] [review] gegl_operation_invalidate should respect the clear_cache parameter
Pushed to git, tentative testing in GIMP doesn't turn up problems, it might be cautionary remnants of early stages of the goat invasion. commit 0f52a6aecafac38b808589424116f3ca32136223 Author: Debarshi Ray <debarshir@gnome.org> Date: Sun Feb 14 16:59:59 2016 +0100 gegl_operation_invalidate should respect the clear_cache parameter https://bugzilla.gnome.org/show_bug.cgi?id=762035