gegl_operation_invalidate should respect the clear_cache parameter

https://bugzilla.gnome.org/show_bug.cgi?id=762035